fix: [CDS-71905]: Shifting conditional icon to left for diamond node (#16730)

--- a/src/modules/70-pipeline/components/PipelineDiagram/Nodes/DiamondNode/DiamondNode.module.scss
+++ b/src/modules/70-pipeline/components/PipelineDiagram/Nodes/DiamondNode/DiamondNode.module.scss
@@ -76,8 +76,8 @@
   .conditional {
     position: absolute;
     transform: rotate(-45deg);
-    top: -17px;
-    left: 13px;
+    top: 21px;
+    left: -10px;
     color: var(--white) !important;
   }
 
